# deslop

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.MD  cabal.project  cabal.project.freeze  deslop.cabal  flake.nix  fourmolu.yaml  hie.yaml
.github/actions/setup-haskell/: action.yml
.github/workflows/: ci.yml  release.yml
.golden/01-block-comment-deslop/: golden
.golden/01-block-comment-lexer/: actual  golden
.golden/01-block-comment-parser/: actual  golden
.golden/01-comments-lexer/: actual  golden
.golden/01-import-lexer/: actual  golden
.golden/01-imports-deslop/: actual  golden
.golden/01-imports-lexer/: actual  golden
.golden/01-imports-parser/: actual  golden
.golden/01-line-comments-deslop/: golden
.golden/01-line-comments-lexer/: actual  golden
.golden/01-line-comments-parser/: actual  golden
.golden/02-block-comment-deslop/: golden
.golden/02-block-comment-lexer/: actual  golden
.golden/02-block-comment-parser/: actual  golden
.golden/02-multiline-import-deslop/: golden
.golden/02-multiline-import-lexer/: golden
.golden/02-multiline-import-parser/: golden
.golden/commented-imports-deslop/: golden
.golden/commented-imports-lexer/: golden
.golden/commented-imports-parser/: golden
.golden/translations-1/: golden
.golden/ts-project-1-git-modified/: golden
.golden/ts-project-1-snapshot/: actual  golden
.golden/tsconfig-complex/: actual
.golden/tsconfig-simple/: actual
app/: Main.hs
docs/: nvim.md
nix/: ide.nix
src/: Deslop.hs  Effects.hs  Utils.hs
src/Deslop/: Imports.hs
src/Effects/: AI.hs  CLILog.hs  FileSystem.hs  Git.hs
src/Translations/: Manager.hs  Parser.hs  Translator.hs
src/TypeScript/: AST.hs  Ast.hs  Config.hs  ImportsFix.hs  Lexer.hs  Parser.hs  Tokens.hs
test/: TestUtils.hs
test/Deslop/: ImportSpec.hs
test/E2E/: FileGoldenSpec.hs  GoldenSpec.hs  ProjectGoldenSpec.hs  TranslationsSpec.hs
test/TypeScript/: LexerSpec.hs
test/fixtures/ts-project-1/: tsconfig.json
test/fixtures/ts-project-1/messages/: en.json  es.json  fr.json
test/fixtures/ts-project-1/src/app/[locale]/: page.tsx
test/fixtures/ts-project-1/src/app/[locale]/login/: page.tsx
test/fixtures/ts-project-1/src/components/ds/: Button.tsx
test/fixtures/ts-project-1/src/features/home/: home-component.ts  home-screen.tsx  home.spec.ts
test/fixtures/ts-project-1/src/features/login/: login-form.ts  login.spec.ts
test/fixtures/ts-project-1/src/lib/: util.ts
test/fixtures/ts-project-1/tests/: test-log.ts
test/fixtures/ts-project-1/tests/fixtures/: fixtures.ts
test/fixtures/typescript/: 01-comments.ts  01-line-comments.ts  02-block-comment.ts  02-multiline-import.ts  commented-imports.ts  tsconfig-complex.json  tsconfig-simple.json
