cabal-version:      3.0
name:               deslop
version:            0.1.3
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ivy Apps LTD
maintainer:         iliyan@ivy-apps.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common shared-properties
    default-language: GHC2024
    
    ghc-options: 
        -Wall -Wcompat -Widentities -Wincomplete-record-updates 
        -Wincomplete-uni-patterns -Wmissing-export-lists 
        -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

    default-extensions:
        DuplicateRecordFields
        OverloadedRecordDot
        NoFieldSelectors
        OverloadedStrings
        TypeFamilies
        DeriveGeneric

library
    import:           shared-properties
    
    exposed-modules:  
        Deslop
        Deslop.Imports
        TypeScript.Tokens
        TypeScript.AST
        TypeScript.Parser
        TypeScript.Lexer
        TypeScript.Config
        Translations.Parser
        Effects.FileSystem
        Effects.CLILog
        Utils

    build-depends:    
        base ^>=4.20.0.0,
        effectful,
        effectful-core,
        aeson,
        aeson-pretty,
        text,
        bytestring,
        containers,
        unordered-containers,
        directory,
        filepath,
        megaparsec,
        extra,
        ansi-terminal,
        time

    hs-source-dirs:   src

executable deslop
    import:           shared-properties
    main-is:          Main.hs
    other-modules: Paths_deslop
    
    build-depends:
        base,
        deslop,
        extra,
        ansi-terminal,
        optparse-applicative,
        text

    hs-source-dirs:   app

test-suite deslop-test
    import:           shared-properties
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    
    build-tool-depends: hspec-discover:hspec-discover
    
    other-modules:
        TestUtils
        Deslop.ImportSpec
        TypeScript.LexerSpec
        E2E.FileGoldenSpec
        E2E.ProjectGoldenSpec

    build-depends:
        base,
        deslop,
        hspec,
        hspec-golden,
        text,
        effectful,
        bytestring,
        filepath,
        directory,
        unliftio,
        megaparsec,
        pretty-show,
        extra,
        QuickCheck